kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthconnect-api
  namespace: healthconnect
spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: healthconnect-api

  template:
    metadata:
      labels:
        app: healthconnect-api

    spec:
      containers:
        - name: healthconnect-api

          image: ritikahealthconnectacr.azurecr.io/healthconnect-api:28

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
