kubernetes/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthconnect-postgres
  namespace: healthconnect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: healthconnect-postgres
  template:
    metadata:
      labels:
        app: healthconnect-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: healthconnect-postgres
  namespace: healthconnect
spec:
  selector:
    app: healthconnect-postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
